kube-configs/app-1.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-1-deployment
spec:
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
        - name: app-1
          image: regner/kubernetes-demo-app-1:v1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8000
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8000
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
