kube-configs/app-3.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-3-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app-3
    spec:
      containers:
        - name: app-3
          image: nginx:1.11
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: index-html
      volumes:
        - name: index-html
          configMap:
            name: app-3-configmap
            items:
              - key: nginx-index-html
                path: index.html
