kube-configs/app-4.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-4-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app-4
    spec:
      containers:
        - name: app-4
          image: regner/kubernetes-demo-app-4:v1
          imagePullPolicy: Always
