kube-configs/traefik.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: traefik
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v1.0.0
          name: traefik
          resources:
            limits:
              cpu: 200m
              memory: 30Mi
            requests:
              cpu: 100m
              memory: 20Mi
          ports:
            - containerPort: 80
              hostPort: 80
            - containerPort: 8080
          args:
            - --web
            - --kubernetes
