kube-configs/app-1.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-service
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: app-1
