kube-configs/app-2.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-service
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: app-2
