kube-configs/app-3.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-3-service
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: app-3
