kube-configs/app-4.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-4-service
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: app-4
