kube-configs/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: traefik
