kube-configs/app-2.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-2-ingress
  annotations:
    traefik.frontend.rule.type: pathprefixstrip
spec:
  rules:
    - http:
        paths:
          - path: /app-2
            backend:
              serviceName: app-2-service
              servicePort: http
