kube-configs/traefik.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: traefik-service
              servicePort: http
